Some cleanup was done